# eglinfo

./: CMakeLists.txt  README.md  eglinfo.pro  main.cpp
